--- a/.env.dist
+++ b/.env.dist
@@ -12,6 +12,7 @@ BROWSHOT_API_KEY=
 ###> telegram ###
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+TELEGRAM_PROXY=
 ###< telegram ###
 
 ###> pushbullet ###
